welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: not found: value faire
    faire
    ^MethodsPicture:10: error: not found: value leveBrosee
  leveBrosee()
  ^