welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  for(compteur <- 1 to 4){
    faire
  }
}

def faireV(c: Color){
  avance()
  baisseBrosse()
  leveBrosee()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
}

def faireMotif(){
  faireV(Color.YELLOW)
  faireV(Color.RED)
  faireV(Color.BLUE)
  faireV(Color.GREEN)
}